# Research_NAVERLABS_2020

./: .gitignore  README.md
Feature_Detection/: CMakeLists.txt  main.cpp  temp.cpp
Feature_Matching_GMS+ORB/: gms_matcher.h  temp.cpp
Feature_Matching_GMS+ORB/GMS-Feature-Matcher-master/src/: demo.cpp
Feature_Matching_SuperGlue/SuperGluePretrainedNetwork-master/: TestSuperGlue.m  demo_superglue.py  match_pairs.py  requirements.txt
Feature_Matching_SuperGlue/SuperGluePretrainedNetwork-master/assets/: myData.txt  scannet_sample_pairs_with_gt.txt
Feature_Matching_SuperGlue/SuperGluePretrainedNetwork-master/dump_match_pairs/: 40027089_1566000000000002_matches.npz  40027089_1566000000000010_matches.npz  40027089_1566000000000014_matches.npz  40027089_1566000000000031_matches.npz  40027089_1566000000000036_matches.npz  40027089_1566000000000037_matches.npz  40027089_1566000000000038_matches.npz  40027089_1566000000000046_matches.npz  40027089_1566000000000047_matches.npz  40027089_1566000000000048_matches.npz  40027089_1566000000000051_matches.npz  40027089_1566000000000063_matches.npz  40027089_1566000000000067_matches.npz  40027089_1566000000000070_matches.npz  40027089_1566000000000075_matches.npz  40027089_1566000000000082_matches.npz  (+2168 more)
Place_Recognition_DBoW3/: CMakeLists.txt  main.cpp  temp.cpp
Place_Recognition_DELF/: Docker Setting
Place_Recognition_FBoW/: CMakeLists.txt  main.cpp
Place_Recognition_NetVLAD/: 0720_Full_1F.txt  0720_Full_B1.txt  1F_Database.txt  B1.txt  B1_Query.txt  Result_1F_DB_0720.txt  Result_1F_Q_0720.txt  Result_B1_DB_0720.txt  Result_B1_Q_0720.txt
Place_Recognition_NetVLAD/NetVLAD_Main/: README.md  Train_NAVERLABS_1F.m  Train_NAVERLABS_1F_Test.m  Train_NAVERLABS_1F_Test_FNL.m  Train_NAVERLABS_B1.m  Train_NAVERLABS_B1_Test_FNL.m  demo.m  getClusters.m  localPaths.m  recallAtN.m  serialAllFeats.m  serialAllFeats_test.m  testCore.m  trainWeakly.m
Place_Recognition_NetVLAD/Temp/: 1F_Query.txt  B1_Database.txt  untitled2.m  untitled3.m
(+4285 files in other folders)
